--- a/content/post/2020-04-14-evaluating-mass-muni-cafr-tabulizer-results-part-3.Rmd
+++ b/content/post/2020-04-14-evaluating-mass-muni-cafr-tabulizer-results-part-3.Rmd
@@ -35,7 +35,7 @@ knitr::opts_chunk$set(comment=NA, fig.width=12, fig.height=8, out.width = '100%'
 
 # Introduction
 
-This post is a continuation [Tabulizer and pdftools Together as Super-powers - Part 2](https://redwallanalytics.com/2020/04/06/tabulizer-and-pdftools-togeteher-as-super-powers-part-2/) where we showed how combining `pdftools` and `tabulizer` together could lead to better, more scaleable data extraction. Although the full process used to extract data from all our 149 PDFs will not shown in this series, to review the steps that Redwall followed for the portion using `pdftools` and `tabulizer`:
+This post is a continuation [Tabulizer and pdftools Together as Super-powers - Part 2](https://redwallanalytics.com/2020/04/06/tabulizer-and-pdftools-togeteher-as-super-powers-part-2/) where we showed how combining `pdftools` and `tabulizer` together could lead to better, more scaleable data extraction on a large number of slightly varying pdfs. Although the full process used to extract data from all our 149 PDFs will not shown in this series, to review the steps that Redwall followed for the portion using `pdftools` and `tabulizer`:
 
   1. Load all the pdf_data (metadata) for every page of the 148 PDFs into a list of lists with the metadata data.frame from pdftool's pdf_data.
   2. Filter the nested list to keep only the key tables (ie:  Statement of Activities, Balance Sheet, Statement of Net Position) using regular expression matching of sub-elements.
@@ -88,7 +88,7 @@ all_missing
 ```
 
 
-The next table shows cases where one or more variable was not being extracted properly (difference not equal to zero). Of the 720 potential items in the spreadsheets which were successfully parsed, 43 did not match. 94% accuracy seems pretty good at first glance, but an analyst probably couldn't rely on this without some manual back-up checking. Another possible objective would be to know which formats would have a higher likelihood of failure, and just check those. For example, some tables run over onto a second page, and others have sections with larger indentations. In the next step, we will slice the problematic tables out of the relevant PDF, and run these through `Textract` to see what happens.
+The next table shows cases where one or more variable was not being extracted properly (difference not equal to zero). Of the 720 potential items in the spreadsheets which were successfully parsed, 43 did not match. 94% accuracy seems pretty good at first glance, but an analyst probably couldn't rely on this without some manual back-up checking. Another possible objective would be to know which formats would have a higher likelihood of failure, and just check those. For example, some tables run over onto a second page, and others have sections with larger indentations. In the next step, we will slice the problematic tables out of the relevant PDF, and run these through `textract` to see what happens.
 
 
 ```{r 'bad-elements', echo=FALSE, message=FALSE, warning=FALSE, fig.cap= '43 Elements had differences with manually extracted data'}
@@ -104,7 +104,8 @@ bad_elements <- setdiff(any_missing,all_missing)
 
 # Show bad cases
 DT::datatable(mass_compare[muni %in% bad_elements, 
-             .SD, .SDcols=patterns("diff|muni")])
+             .SD, .SDcols=patterns("diff|muni")], 
+             colnames = c("Municipality", "Assigned", "Unassigned", "Total Expenditures", "Unrestricted", "Net Position"))
 
 ```
 
