--- a/content/post/2020-03-31-parsing-mass-municipal-pdf-cafrs-with-tabulizer-pdftools-and-aws-textract-part-1.Rmd
+++ b/content/post/2020-03-31-parsing-mass-municipal-pdf-cafrs-with-tabulizer-pdftools-and-aws-textract-part-1.Rmd
@@ -11,7 +11,7 @@ output:
     code_folding: 'hide'
 ---
 
-```{r 'set-up', include=FALSE}
+```{r 'set-up', echo=TRUE, message=FALSE, warning=FALSE}
 
 # Libraries
 packages <- 
@@ -71,7 +71,7 @@ names(reason)[c(1:16, 40:106)]
 # Blogpost Index
 
 * Part 1 - Parsing Mass Municipal PDF CAFRs with Tabulizer, pdftools and AWS Textract
-* Part 2 - [Tabulizer and pdftools Together as Super-powers](https://redwallanalytics.com/2020/04/06/tabulizer-and-pdftools-togeteher-as-super-powers-part-2/)
+* Part 2 - [Tabulizer and pdftools Together as Super-powers](https://redwallanalytics.com/2020/04/06/tabulizer-and-pdftools-together-as-super-powers-part-2/)
 * Part 3 - [Evaluating Mass Muni CAFR Tabulizer Results](https://redwallanalytics.com/2020/04/14/evaluating-mass-muni-cafr-tabulizer-results-part-3/)
 * Part 4 - [Scraping Failed Tabulizer PDFs with AWS Textract](https://redwallanalytics.com/2020/04/14/scraping-failed-tabulizer-pdfs-with-aws-textract-part-4/)
 * Part 5 - [Evaluating Mass Muni CAFR Textract Results](https://redwallanalytics.com/2020/04/24/evaluating-mass-muni-cafr-textract-results-part-5/)
